syntax = "proto3";

package com.example;

option java_multiple_files = true;


message RequisicaoChave{
int64 chave = 1;
}
message RequisicaoValor{
int64 chave = 1;
string valor = 2;
}
message ServerResponse{
string response = 1;
}
service Service{
rpc insert(RequisicaoValor) returns(ServerResponse) {}
rpc select(RequisicaoChave) returns(ServerResponse) {}
rpc update(RequisicaoValor) returns(ServerResponse) {}
rpc delete(RequisicaoChave) returns(ServerResponse) {}
}